--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -1,18 +1,21 @@
 // Colors
-$body-background-color: #fafafa;
-$body-default-color: #333333;
 $brand-primary: #397ab1;
 $grey: #dddddd;
 $light-grey: #f9f9f9;
 $dark-grey: #777777;
 
+// Body
+$body-background-color: #fafafa;
+$body-default-color: #333333;
+$body-default-font-family: Helvetica, Arial, sans-serif;
 // Spacing
 $space: 1.4rem;
+$large-space: 2 * $space;
 $site-max-width: 100rem;
 
 // Font sizes
 $base-font-size: 1.4rem;
-$large-font-size: 1.8rem;
+$large-font-size: 2.2rem;
 
 // Form inputs
 $input-border: $grey;
