--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -1,19 +1,35 @@
+@mixin desktop {
+    @media (min-width: 50rem){
+        @content;
+    }
+}
+
 .page-content {
     display: flex;
     margin: 0 auto;
     max-width: $site-max-width;
-    padding: $large-space $space;
     height: $page-content-height;
+
+    @include desktop {
+        padding: $large-space $space;
+    }
 }
 
 .page-content__sidebar {
-    display: flex;
+    display: none;
     width: $page-content-sidebar-width;
     padding-right: $large-space;
+
+    @include desktop {
+        display: flex;
+    }
 }
 
 .page-content__main {
     display: flex;
-    width: $page-content-main-width;
+    width: 100%;
 
+    @include desktop {
+        width: $page-content-main-width;
+    }
 }
