--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -1,17 +1,27 @@
 .header {
-  background: $header-bg;
-  color: $header-color;
+    background: $header-bg;
+    color: $header-color;
 }
 
 .header__content {
-  display: flex;
-  height: $header-height;
-  justify-content: space-between;
-  max-width: $site-max-width;
-  margin: 0 auto;
-  padding: $space;
+    align-items: center;
+    display: flex;
+    height: $header-height;
+    justify-content: space-between;
+    max-width: $site-max-width;
+    margin: 0 auto;
+    padding: $space;
 }
 
 .header__title {
-  margin: 0;
+    margin: 0;
+}
+
+.header__nav-toggle {
+    cursor: pointer;
+    height: 2rem;
+    width: 2rem;
+    @include desktop {
+        display: none;
+    }
 }
