--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -1,9 +1,3 @@
-@mixin desktop {
-    @media (min-width: 50rem){
-        @content;
-    }
-}
-
 .page-content {
     display: flex;
     margin: 0 auto;
@@ -16,13 +10,25 @@
 }
 
 .page-content__sidebar {
-    display: none;
-    width: $page-content-sidebar-width;
-    padding-right: $large-space;
+    display: flex;
+    transition: left .3s ease;
+    width :100vw;
+
+    position: fixed;
+    top: $header-height;
+    left: -100vw;
+    bottom: 0;
 
     @include desktop {
         display: flex;
+        padding-right: $large-space;
+        position: static;
+        width: $page-content-sidebar-width;
     }
+}
+
+.is-nav-open .page-content__sidebar {
+    left: 0;
 }
 
 .page-content__main {
